src/solucao-docker-compose/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902

static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/rentservice/login"
                route:
                  prefix_rewrite: "/login"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/rentservice/motorcycle"
                route:
                  prefix_rewrite: "/motorcycle"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/rentservice/order"
                route:
                  prefix_rewrite: "/order"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/rentservice/rental"
                route:
                  prefix_rewrite: "/rental"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/rentservice/user"
                route:
                  prefix_rewrite: "/user"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/rentservice/healthcheck"
                route:
                  prefix_rewrite: "/healthcheck"
                  cluster: rent.service.cluster
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: www.envoyproxy.io
                  cluster: service_envoyproxy_io

  clusters:
  - name: rent.service.cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: rent.service.cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rent.service
                port_value: 80
  # - name: order
  #   connect_timeout: 0.25s
  #   type: LOGICAL_DNS
  #   # Comment out the following line to test on v6 networks
  #   dns_lookup_family: V4_ONLY
  #   lb_policy: ROUND_ROBIN
  #   load_assignment:
  #     cluster_name: order
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: order.api
  #               port_value: 8080
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    #     sni: motorcycle.api
  - name: service_envoyproxy_io
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
